# syslogger

./: CMakeLists.txt  ConsoleLogSpooler.c  SysLogger.c  SysLogger.h
camkes/: ConsoleLogSpooler.camkes  SysLogger.camkes  SysLoggerHelper.camkes  if_LogSpooler.camkes  if_SysLogger.camkes
client/: CMakeLists.txt
client/include/: SysLogger.h  SysLoggerClient.h
client/src/: SysLoggerClient.c
